# HydraFS

./: CMakeLists.txt  README.md  secret_message.txt
src/proto/: hydra.proto
src/worker/: main.cpp
worker/: CMakeLists.txt
worker/src/worker/: stitch.cpp
